2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Modify mode page 01h decoding for CD-ROM returned mode page
	  size.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 0Eh.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 10h.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 07h.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 04h.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 01h.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 0Bh.

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Typo

2015-10-30  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 03h.

2015-10-29  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 05h.

2015-10-29  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 08h.

2015-10-25  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 02h.

2015-10-25  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Implemented decoding mode page 0Ah.

2015-10-25  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added method for decoding MODE SENSE(10) response.

2015-10-25  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added information from SCSI-3 SBC-1.

2015-10-24  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	  Added header information from SCSI-2.

2015-10-24  Natalia Portillo  <claunia@claunia.com>

	* SCSI/Modes.cs:
	* DiscImageChef.Decoders.csproj:
	  Implement SCSI-1 Mode Page decoding.

2015-10-23  Natalia Portillo  <claunia@claunia.com>
